// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeBoolean fails when given a boolean 1`] = `
"expect(received).not.toBeBoolean()

Expected value to not be of type boolean, received:
  true"
`;

exports[`.not.toBeBoolean fails when given an object of type boolean 1`] = `
"expect(received).not.toBeBoolean()

Expected value to not be of type boolean, received:
  {}"
`;

exports[`.toBeBoolean fails when not given a boolean 1`] = `
"expect(received).toBeBoolean()

Expected value to be of type boolean, received:
  1"
`;
